--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,11 @@
-[submodule "glfw"]
-	path = glfw
+[submodule "vendor/glfw"]
+	path = vendor/glfw
 	url = https://github.com/glfw/glfw
 
-[submodule "glm"]
-    path = glm
+[submodule "vendor/glm"]
+    path = vendor/glm
     url = https://github.com/g-truc/glm
+
+[submodule "vendor/spdlog"]
+	path = vendor/spdlog
+	url = https://github.com/gabime/spdlog
