Added a DemoLayer that displays the ImGui demo screen

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(App)
 
-add_executable(${PROJECT_NAME} src/App.cpp src/Mandelbrot.cpp src/Mandelbrot.h)
+add_executable(${PROJECT_NAME} src/App.cpp src/Mandelbrot.cpp src/Mandelbrot.h src/DemoLayer.cpp src/DemoLayer.h)
 target_link_libraries(${PROJECT_NAME} PUBLIC Autm)
