--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(App)
 
-add_executable(${PROJECT_NAME} src/App.cpp src/Mandelbrot.cpp src/Mandelbrot.h src/DemoLayer.cpp src/DemoLayer.h)
+add_executable(${PROJECT_NAME} src/App.cpp src/Mandelbrot.cpp src/Mandelbrot.h src/DemoLayer.cpp src/DemoLayer.h src/RayMarching.cpp src/RayMarching.h)
 target_link_libraries(${PROJECT_NAME} PUBLIC Autm)
